; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/psql/extr_command.c_printGSSInfo.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/psql/extr_command.c_printGSSInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@pset = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [29 x i8] c"GSSAPI-encrypted connection\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @printGSSInfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @printGSSInfo() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 4
  %2 = call i32 @PQgssEncInUse(i32 %1)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %8

5:                                                ; preds = %0
  %6 = call i8* @_(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @printf(i8* %6)
  br label %8

8:                                                ; preds = %5, %4
  ret void
}

declare dso_local i32 @PQgssEncInUse(i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
